--- a/components/SearchBar/SearchBar.module.scss
+++ b/components/SearchBar/SearchBar.module.scss
@@ -18,10 +18,15 @@
 }
 
 .centre {
-  position: absolute;
-  top: 45%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  @include media(">=phone", "<=tablet") {
+    margin-top: 50%;
+  }
+  @include media(">=tablet") {
+    position: absolute;
+    top: 45%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
 }
 
 @keyframes goToTop {
